# ESP32-Anxiety-Monitor

./: CMakeLists.txt  LICENSE  README.md  README.txt  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults
components/app_common/: CMakeLists.txt  app_rtc.c
components/app_common/include/: app_config.h  app_message.h
components/app_ui/: CMakeLists.txt  app_lvgl.c  app_touch_gt911.c  app_ui_about.c  app_ui_config.c  app_ui_font_16.c  app_ui_history.c  app_ui_statics.c
components/app_ui/include/: app_lvgl.h
components/ppi_process/: CMakeLists.txt  anxiety_idx_cal.c  ppi_fre_feat.c  ppi_nl_feat.c  ppi_process.c  ppi_time_feat.c
components/ppi_process/include/: ppi_process.h
main/: CMakeLists.txt  app_FreeRtos.c  app_ai_client.c  app_ai_client.h  idf_component.yml
